# encryptPython

./: LICENSE  README.md  build.sh
Python-3.8.5/: build.sh  configure.ac
Python-3.8.5/Include/: marshal.h  opcode.h
Python-3.8.5/Lib/: opcode.py
Python-3.8.5/Lib/importlib/: _bootstrap_external.py
Python-3.8.5/Python/: marshal.c  opcode_targets.h  pythonrun.c
crypt/: CMakeLists.txt  build.sh  create_key.py  scan_encrypt.c  test_unis_encrypt.c  unis_encrypt.c
crypt/inc/: secret_key.h  unis_encrypt.h
crypt/test/: test.py  test.sh  test2.py
crypt/test/tools/: decrypt.py  parse_pyc.py
